# cc-condor-sync

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  condor_job.hpp  condor_status_to_gpu_map.py  htcondor-clusercockpit-push.py  htcondor-clustercockpit-push.py  requirements.txt
scripts/: condor_status_to_gpu_map.py  map-gpu-ids.py  stop-jobs-no-longer-running.py  stop-jobs.py
src/: htcondor_cc_sync_plugin.cpp  htcondor_cc_sync_plugin.hpp
